{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 46,
  "lineage": "d1e64ec1-71dc-bff6-d5e5-5f7d9d9ee835",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021976026968:internet-gateway/igw-0545650d9da166278",
            "id": "igw-0545650d9da166278",
            "owner_id": "021976026968",
            "vpc_id": "vpc-00fa3181be7d3a88c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw-route",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0545650d9da166278",
            "id": "r-rtb-05cddca640ab2e0421080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05cddca640ab2e042",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_route_table.terraform-public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021976026968:route-table/rtb-0cfd69784eed5d752",
            "id": "rtb-0cfd69784eed5d752",
            "owner_id": "021976026968",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00fa3181be7d3a88c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021976026968:route-table/rtb-05cddca640ab2e042",
            "id": "rtb-05cddca640ab2e042",
            "owner_id": "021976026968",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0545650d9da166278",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00fa3181be7d3a88c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096b32c2836d2611a",
            "route_table_id": "rtb-0cfd69784eed5d752",
            "subnet_id": "subnet-05a4dcf9f9cea43c6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.terraform-private",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a5b0436fabedf08",
            "route_table_id": "rtb-0cfd69784eed5d752",
            "subnet_id": "subnet-0cc461628e33d5810"
          },
          "dependencies": [
            "module.vpc.aws_route_table.terraform-private",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009213ab6edfb55be",
            "route_table_id": "rtb-05cddca640ab2e042",
            "subnet_id": "subnet-08f35a0828d4d697e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.terraform-public",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea6fc4c26501bdb6",
            "route_table_id": "rtb-05cddca640ab2e042",
            "subnet_id": "subnet-0e73949ca2080b03b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.terraform-public",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021976026968:subnet/subnet-05a4dcf9f9cea43c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.37.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a4dcf9f9cea43c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021976026968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00fa3181be7d3a88c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021976026968:subnet/subnet-0cc461628e33d5810",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.37.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc461628e33d5810",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021976026968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00fa3181be7d3a88c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021976026968:subnet/subnet-08f35a0828d4d697e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.37.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f35a0828d4d697e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021976026968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00fa3181be7d3a88c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021976026968:subnet/subnet-0e73949ca2080b03b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.37.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e73949ca2080b03b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021976026968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00fa3181be7d3a88c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021976026968:vpc/vpc-00fa3181be7d3a88c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.37.0.0/16",
            "default_network_acl_id": "acl-080e3ad6a74e0ed1b",
            "default_route_table_id": "rtb-0cadc85ebcb5e6d0f",
            "default_security_group_id": "sg-05e47c08a006fb58e",
            "dhcp_options_id": "dopt-02bf09425b2239846",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00fa3181be7d3a88c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cadc85ebcb5e6d0f",
            "owner_id": "021976026968"
          }
        }
      ]
    }
  ]
}